# atla

./: .gitignore  .gitleaks.toml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  deny.toml  dist-workspace.toml  jira_deep_test_summary.json  mise.toml
crates/atla-cli/: Cargo.toml
crates/atla-cli/src/: aliases.rs  cli.rs  config.rs  context.rs  doc_check.rs  error.rs  main.rs  operation.rs  output.rs  pagination.rs  policy.rs
crates/atla-cli/src/cli/: auth.rs  config.rs  confluence.rs  discovery.rs  jira.rs  mod.rs  plan.rs  tests.rs
crates/atla-cli/src/commands/: auth.rs  config.rs  mod.rs  plan.rs
crates/atla-cli/src/output/: schema.rs
crates/atla-cli/tests/: e2e.rs
crates/atla-confluence-api/: Cargo.toml  README.md  build.rs
crates/atla-confluence-api/.openapi-generator/: FILES
crates/atla-confluence-api/docs/: AbstractPageLinks.md  AccountStatus.md  AccountType.md  AdminKeyApi.md  AdminKeyResponse.md  Ancestor.md  AncestorType.md  AncestorsApi.md  AppPropertiesApi.md  AttachmentApi.md  AttachmentBulk.md  AttachmentCommentModel.md  AttachmentLinks.md  AttachmentSingle.md  AttachmentSingleLabels.md  AttachmentSingleOperations.md  AttachmentSingleProperties.md  AttachmentSingleVersions.md  AttachmentSortOrder.md  AttachmentVersion.md  BlogPostApi.md  BlogPostBodyWrite.md  BlogPostBulk.md  BlogPostCommentModel.md  BlogPostContentStatus.md  BlogPostInlineCommentModel.md  BlogPostNestedBodyWrite.md  BlogPostSingle.md  BlogPostSingleLikes.md  BlogPostSortOrder.md  BlogPostVersion.md  BodyBulk.md  BodySingle.md  BodyType.md  CheckAccessByEmail200Response.md  CheckAccessByEmailRequest.md  ChildCustomContent.md  ChildCustomContentSortOrder.md  ChildPage.md  ChildPageSortOrder.md  (+231 more)
crates/atla-confluence-api/src/: lib.rs
crates/atla-confluence-api/src/apis/: admin_key_api.rs  ancestors_api.rs  app_properties_api.rs  attachment_api.rs  blog_post_api.rs  children_api.rs  classification_level_api.rs  comment_api.rs  configuration.rs  content_api.rs  content_properties_api.rs  custom_content_api.rs  data_policies_api.rs  database_api.rs  descendants_api.rs  folder_api.rs  label_api.rs  like_api.rs  mod.rs  operation_api.rs  page_api.rs  redactions_api.rs  smart_link_api.rs  space_api.rs  space_permissions_api.rs  space_properties_api.rs  space_roles_api.rs  task_api.rs  user_api.rs  version_api.rs  whiteboard_api.rs
crates/atla-confluence-api/src/models/: abstract_page_links.rs  account_status.rs  account_type.rs  admin_key_response.rs  ancestor.rs  ancestor_type.rs  attachment_bulk.rs  attachment_comment_model.rs  attachment_links.rs  attachment_single.rs  attachment_single_labels.rs  attachment_single_operations.rs  attachment_single_properties.rs  attachment_single_versions.rs  attachment_sort_order.rs  attachment_version.rs  blog_post_body_write.rs  blog_post_bulk.rs  blog_post_comment_model.rs  blog_post_content_status.rs  blog_post_inline_comment_model.rs  blog_post_nested_body_write.rs  blog_post_single.rs  blog_post_single_likes.rs  blog_post_sort_order.rs  blog_post_version.rs  body_bulk.rs  body_single.rs  body_type.rs  check_access_by_email_200_response.rs  check_access_by_email_request.rs  child_custom_content.rs  child_custom_content_sort_order.rs  child_page.rs  child_page_sort_order.rs  children_comment_model.rs  children_response.rs  classification_level.rs  classification_level_color.rs  classification_level_status.rs  (+203 more)
crates/atla-confluence-v1-api/: Cargo.toml  README.md  build.rs
crates/atla-confluence-v1-api/.openapi-generator/: FILES
crates/atla-confluence-v1-api/docs/: AddLabelsToContentRequest.md  Content.md  ContentApi.md  ContentArray.md  ContentAttachmentsApi.md  ContentLabelsApi.md  GenericLinksValue.md  Label.md  LabelArray.md  LabelCreate.md  LongTask.md  LongTaskLinks.md  SearchApi.md  SearchPageResponseSearchResult.md  SearchResult.md  Space.md  SpaceApi.md  SpaceDescriptionCreate.md  SpaceDescriptionCreatePlain.md  SpaceUpdate.md  Version.md
crates/atla-confluence-v1-api/src/: lib.rs
crates/atla-confluence-v1-api/src/apis/: configuration.rs  content_api.rs  content_attachments_api.rs  content_labels_api.rs  mod.rs  search_api.rs  space_api.rs
crates/atla-confluence-v1-api/src/models/: add_labels_to_content_request.rs  content.rs  content_array.rs  generic_links_value.rs  label.rs  label_array.rs  label_create.rs  long_task.rs  long_task_links.rs  mod.rs  search_page_response_search_result.rs  search_result.rs  space.rs  space_description_create.rs  space_description_create_plain.rs  space_update.rs  version.rs
crates/atla-core/: Cargo.toml
crates/atla-core/src/: auth.rs  client.rs  confluence.rs  generated_api.rs  http_policy.rs  jira.rs  lib.rs  markdown.rs  profile.rs  secure_file.rs
crates/atla-core/src/confluence/: attachments.rs  blog.rs  comments.rs  labels.rs  mod.rs  models.rs  pages.rs  search.rs  spaces.rs  util.rs
crates/atla-core/src/jira/: attachments.rs  boards.rs  comments.rs  issues.rs  links.rs  mod.rs  models.rs  projects.rs  sprints.rs  util.rs  worklogs.rs
crates/atla-core/src/markdown/: mod.rs  parse.rs  render.rs  tests.rs
crates/atla-core/tests/: http_clients.rs  markdown_fixtures.rs
crates/atla-jira-api/: .openapi-generator-ignore  Cargo.toml  README.md  build.rs
crates/atla-jira-api/.openapi-generator/: FILES
crates/atla-jira-api/docs/: Attachment.md  Comment.md  CommentCreateRequest.md  CreatedIssue.md  IssueAttachmentsApi.md  IssueBean.md  IssueCommentsApi.md  IssueLinksApi.md  IssueSearchApi.md  IssueTransitionRequest.md  IssueTransitionRequestTransition.md  IssueType.md  IssueTypesApi.md  IssueUpdateDetails.md  IssuesApi.md  LinkIssueRequestJsonBean.md  LinkIssueRequestJsonBeanInwardIssue.md  LinkIssueRequestJsonBeanType.md  PageBeanProject.md  PageOfComments.md  Project.md  ProjectsApi.md  SearchAndReconcileResults.md  Status.md  Transition.md  Transitions.md  User.md
crates/atla-jira-api/src/: lib.rs
crates/atla-jira-api/src/apis/: agile_boards_api.rs  agile_sprints_api.rs  configuration.rs  (+10 more)
(+137 files in other folders)
