[package]
name = "atla"
version = "0.1.0"
description = "Unified Atlassian CLI for Jira and Confluence"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

[[bin]]
name = "atla"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
atla-core = { path = "../atla-core" }
clap.workspace = true
dialoguer.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
