[package]
name = "atla-confluence-api"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
doctest = false

[build-dependencies]
progenitor = "0.14"
serde_json = "1"
openapiv3 = "2"
syn = { version = "2", features = ["full"] }
prettyplease = "0.2"

[dependencies]
progenitor-client = "0.14"
reqwest = { workspace = true, features = ["json", "rustls"] }
serde = { workspace = true }
serde_json = { workspace = true }
serde_repr = "0.1"
chrono = { workspace = true }
uuid = { version = "1", features = ["serde"] }
url = "2"
regress = "0.11"
bytes = "1"
