[package]
name = "atla-confluence-v1-api"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
doctest = false

[build-dependencies]
progenitor = "0.14"
serde_json = "1"
openapiv3 = "2"
syn = { version = "2", features = ["full"] }
prettyplease = "0.2"

[dependencies]
progenitor-client = "0.14"
reqwest = { workspace = true, features = ["json", "rustls"] }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
bytes = "1"
