[package]
name = "atla-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
atla-confluence-api = { path = "../atla-confluence-api" }
atla-confluence-v1-api = { path = "../atla-confluence-v1-api" }
directories.workspace = true
keyring.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
toml.workspace = true
reqwest.workspace = true

[dev-dependencies]
tempfile.workspace = true
