[package]
name = "atla-core"
version = "0.3.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
atla-confluence-api = { path = "../atla-confluence-api" }
atla-confluence-v1-api = { path = "../atla-confluence-v1-api" }
atla-jira-api = { path = "../atla-jira-api" }
base64.workspace = true
chrono.workspace = true
keyring.workspace = true
progenitor-client = "0.14"
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
toml.workspace = true
reqwest.workspace = true

[target.'cfg(not(unix))'.dependencies]
directories = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[dev-dependencies]
tempfile.workspace = true
