[package]
name = "atla-core"
version = "0.6.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
atla-confluence-api = { path = "../atla-confluence-api" }
atla-confluence-v1-api = { path = "../atla-confluence-v1-api" }
atla-jira-api = { path = "../atla-jira-api" }
base64.workspace = true
chrono.workspace = true
comrak = { version = "0.53", default-features = false }
httpdate.workspace = true
keyring.workspace = true
progenitor-client = "0.14"
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tempfile.workspace = true
tokio = { version = "1", default-features = false, features = ["time"] }
toml.workspace = true
reqwest.workspace = true

[target.'cfg(not(unix))'.dependencies]
directories = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[dev-dependencies]
tempfile.workspace = true
tokio.workspace = true
wiremock.workspace = true
